rewrite reducer method