@@ -3,7 +3,7 @@ package advent2018.day6;
 import util.Pair;
 import util.Printer;
 
-import java.awt.*;
+import java.awt.Point;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
@@ -14,13 +14,13 @@ import java.util.stream.Collectors;
 
 class Field {
     private final Map<Point, AtomicLong> pointsClaim;
-    private final java.util.List<Point> points;
+    private final List<Point> points;
     private final int lowerBound;
     private final int upperBound;
 
     private int areaCount;
 
-    Field(java.util.List<Point> points, int size) {
+    Field(List<Point> points, int size) {
         this.points = points;
         this.pointsClaim = points.stream().collect(Collectors.toMap(Function.identity(), point -> new AtomicLong(0L)));
         this.lowerBound = -size/2;
@@ -28,21 +28,41 @@ class Field {
     }
 
     Field addPoint(Point point) {
-        List<Pair<Point, Integer>> distances = points.stream()
+        return Optional.of(distances(point))
+                .map(this::checkForLimit)
+                .map(list -> resolveClaim(list, point))
+                .map(list -> this)
+                .orElseThrow(RuntimeException::new);
+    }
+
+    private List<Pair<Point, Integer>> distances(Point point) {
+        return points.stream()
                 .map(p2 -> new Pair<>(p2, Math.abs(point.x - p2.x) + Math.abs(point.y - p2.y)))
                 .sorted(Comparator.comparingInt(Pair::getSecond))
                 .collect(Collectors.toList());
+    }
 
-        if (distances.stream().mapToInt(Pair::getSecond).sum() < 10000)
-            areaCount++;
+    private List<Pair<Point, Integer>> checkForLimit(List<Pair<Point, Integer>> distances) {
+        return Optional.of(distances)
+                .map(dist -> dist.stream().mapToInt(Pair::getSecond).sum())
+                .map(sum -> sum < 10000 ? ++areaCount : areaCount)
+                .map(i -> distances)
+                .orElseThrow(RuntimeException::new);
+    }
 
-        boolean isClaimed = !distances.get(0).getSecond().equals(distances.get(1).getSecond());
-        if (isOnEdge(point) && isClaimed)
-            pointsClaim.remove(distances.get(0).getFirst());
-        else if (isClaimed)
-            pointsClaim.getOrDefault(distances.get(0).getFirst(), new AtomicLong(0L)).incrementAndGet();
+    private long resolveClaim(List<Pair<Point, Integer>> distances, Point current) {
+        return Optional.of(new Pair<>(distances.get(0), distances.get(1)))
+                .filter(pair -> !pair.getFirst().getSecond().equals(pair.getSecond().getSecond()))
+                .map(pair -> isOnEdge(current) ? remove(pair.getFirst().getFirst()) : increment(pair.getFirst().getFirst()))
+                .orElse(0L);
+    }
 
-        return this;
+    private long increment(Point point) {
+        return pointsClaim.getOrDefault(point, new AtomicLong(0L)).incrementAndGet();
+    }
+
+    private long remove(Point point) {
+        return Optional.ofNullable(pointsClaim.remove(point)).map(AtomicLong::get).orElse(0L);
     }
 
     private boolean isOnEdge(Point point) {
